# blog-app

./: .env  .env.template  .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  main.py  pyproject.toml
blog/app/: settings.py  urls.py
blog/blog/: admin.py  models.py  settings.py  urls.py
blog/blog/migrations/: 0001_initial.py  0002_postmodel_commentmodel_delete_blogmodel.py
blog/comment/: admin.py  models.py  serializers.py
blog/comment/migrations/: 0001_initial.py
blog/post/: admin.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
blog/post/management/commands/: prepare.py
blog/post/migrations/: 0001_initial.py  0002_alter_postmodel_title.py  0003_alter_postmodel_image.py
